--- a/src/components/auth/signUp.css
+++ b/src/components/auth/signUp.css
@@ -1,12 +1,20 @@
-.signIn_container {
-  padding: 0px 200px 0px 200px !important;
+.auth_container {
+ display: flex;
+ align-self: center;
+ justify-content: center;
+ height: 100%;
+ padding: 5%;
+ /* padding-bottom: 10%; */
+
 }
 .form-container {
-  padding: 100px 50px 100px 50px !important;
-  background-color: rgba(107, 105, 103, 0.418);
+ 
+  border-radius: 5%;
+  padding: 5%;
+  background-color: rgba(0, 0, 0, 0.177);
 }
 .h1-signUp {
-  color: rgb(50, 78, 87);
+  color: rgba(50, 78, 87, 0);
   text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.514),
     1px -1px 0 rgba(255, 255, 255, 0.514), -1px 1px 0 rgba(255, 255, 255, 0.514),
     1px 1px 0 rgba(255, 255, 255, 0.514);
@@ -31,7 +39,7 @@
   border: 2px solid rgb(65, 101, 112);
 }
 
-@media (max-width: 440px) {
+/* @media (max-width: 440px) {
   .signIn_container {
     padding: 0px 0px 0px 0px !important;
   }
@@ -39,7 +47,7 @@
     padding: 10px 5px 10px 5px !important;
   }
 }
-/* Adjust padding and enable column stacking for small screens */
+
 @media (max-width: 767px) {
   .signIn_container {
     padding: 0;
@@ -58,4 +66,4 @@
     padding: 5px 20px;
     border-radius: 10px;
   }
-}
+} */
