--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,43 @@
-body {
+/* body {
   background-color: rgb(35, 56, 68);
+}
+body {
+  background-image: linear-gradient(to bottom, rgb(35, 56, 68), rgb(35, 56, 68)ffffff);
+} */
+body {
+  background: linear-gradient(
+    -45deg,
+    rgb(255, 255, 255) 0%,
+    rgb(237, 238, 240) 13%,
+    rgb(231, 235, 236) 25%,
+    rgb(223, 227, 230) 38%,
+    rgb(227, 231, 235) 50%,
+    rgb(217, 222, 226) 62%,
+    rgb(221, 226, 230) 75%,
+    rgb(216, 220, 223) 87%,
+    rgb(216, 219, 221) 100%
+  );
+  background-size: 300% 400%;
+  animation: gradiant 25s ease infinite;
+  /* height: 100vh; */
+}
+
+@keyframes gradiant {
+  0% {
+    background-position: 0%;
+  }
+  50% {
+    background-position: 100%;
+  }
+  100% {
+    background-position: 0%;
+  }
+}
+
+h1 {
+  color: white;
+  font-family: Open Sans, sans-serif;
+  font-weight: 300;
+  font-size: 4rem;
+  letter-spacing: 2rem;
 }
