--- a/src/components/home/searchBar.module.css
+++ b/src/components/home/searchBar.module.css
@@ -1,29 +1,30 @@
-.search_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background-color: antiquewhite; */
+.input_group {
+	display: flex;
 }
-.search_bar {
-  background-color: rgba(240, 248, 255, 0.301);
-  width: 90vw;
-  height: 50px;
-  border-radius: 10px;
-  padding-left: 10px;
-  border: 1px solid #ffffff;
-}
-::placeholder {
-  color: white;
-}
-.search_wrapper {
-  position: relative;
+.form_control {
+	background-color: rgba(255, 255, 255, 0.808);
+	width: 75vw;
+	height: 50px;
+	border-radius: 10px;
+	padding-left: 10px;
+	border: 1px solid #ffffff;
+	margin-right: 15%;
+	justify-content: flex-start;
 }
 
-.search_icon {
-  position: absolute;
-  top: 50%;
-  right: 8px;
-  transform: translateY(-50%);
-  pointer-events: none;
-  color: #ffffff !important;
+::placeholder {
+	color: rgb(0, 0, 0);
+}
+.btn_div {
+	justify-content: flex-end;
+}
+.btn {
+	width: 100px;
+	height: 50px;
+}
+@media (max-width: 990px) {
+	.btn {
+		width: 50px;
+		height: 50px;
+	}
 }
