--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,8 @@ h1 {
 :root {
   --primary-color: #007bff;
   /* Blue */
-  --secondary-color: #6c757d;
+  --main-color: rgb(65, 101, 112);
+  --secondary-color: #70777e;
   /* Gray */
   --text-color:#000000;
 }
