--- a/src/components/home/searchBar.module.css
+++ b/src/components/home/searchBar.module.css
@@ -1,11 +1,12 @@
 .input_group {
 	display: flex;
+	padding-top: 20px;
 }
 .form_control {
 	background-color: rgba(255, 255, 255, 0.808);
-	width: 75vw;
+	width: 78vw;
 	height: 50px;
-	border-radius: 10px;
+	border-radius: 10px 0px 0px 10px;
 	padding-left: 10px;
 	border: 1px solid #ffffff;
 	margin-right: 15%;
@@ -21,10 +22,15 @@
 .btn {
 	width: 100px;
 	height: 50px;
+	border-radius: 0px 10px 10px 0px;
+	border: 1px solid #000000a6;
 }
 @media (max-width: 990px) {
 	.btn {
 		width: 50px;
 		height: 50px;
+	}
+	.form_control {
+		width: 80vw;
 	}
 }
