--- a/src/components/cardDetails/cardDetails.module.css
+++ b/src/components/cardDetails/cardDetails.module.css
@@ -1,10 +1,7 @@
-.user_container {
+.card_container {
 	padding: 20px 300px 20px 300px;
 }
-.user_form {
-	background-color: azure;
-}
-.h1-login {
+.h1-card {
 	letter-spacing: 0rem;
 }
 .submit-btn {
@@ -15,9 +12,16 @@
 	color: rgb(255, 255, 255);
 	font-size: 18px;
 	font-weight: 600;
+	margin-top: 5px;
 }
 .submit-btn:hover {
 	background-color: rgb(255, 255, 255);
 	color: rgb(65, 101, 112);
 	border: 2px solid rgb(65, 101, 112);
+}
+
+.redError {
+	color: red; /* Set text color to red */
+	font-size: 14px;
+	margin-top: 5px;
 }
