--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,11 @@
 	padding: 25%;
 	font-size: 80px;
 }
+.footer {
+	position: relative;
+	bottom: 0;
+	width: 100%;
+	background-color: #f0f0f0;
+	text-align: center;
+	padding: 10px 0;
+}
