--- a/src/components/home/cardGrid.module.css
+++ b/src/components/home/cardGrid.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
+  margin-bottom: 1%;
 }
 
 @media (min-width: 441px) and (max-width: 990px) {
@@ -17,5 +18,6 @@
     grid-template-columns: 1fr;
     margin: 0px;
     margin-top: 20px;
+   
   }
 }
