--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,13 @@
 	/* padding: 20px 0px 10px 0px; */
 	/* align-items: center; */
 	justify-content: center;
-	height: 100vh;
+	/* height: 100vh; */
 	/* background-color: rgb(35, 56, 68); */
 	/* height: 100%; */
 }
 .empty-card-grid{
-	padding: 25%;
+	height: 80vh;
+	padding: 5%;
 	font-size: 80px;
 }
 .footer {
@@ -17,4 +18,24 @@
 	background-color: #f0f0f0;
 	text-align: center;
 	padding: 10px 0;
+}
+.card_container {
+	display: flex;
+	/* justify-content: center; */
+	align-items: center;
+	justify-content: space-between;
+	/* Distribute items evenly along the main axis */
+	flex-wrap: wrap;
+}
+.full_card img {
+	width: 300px;
+	height: 300px;
+	border-radius: 10px !important;
+}
+
+.full_card {
+	background-color: var(--secondary-color);
+	border-radius: 10px !important;
+	border: 2px solid rgb(35, 56, 68);
+
 }
