--- a/src/components/home/cardComponent.module.css
+++ b/src/components/home/cardComponent.module.css
@@ -1,16 +1,16 @@
 .card {
   padding: 10px;
-  background-color: var(--secondary-color);
+  background-color: var(--sub-color);
   border-radius: 10px !important;
-  border: 2px solid rgb(35, 56, 68);
+  border: 2px solid var(--main-color);
 }
 .card:hover {
   cursor: pointer;
-  border: 1px solid rgb(19, 29, 36);
+  border: 1px solid var(--secondary-color);
 }
 .card_title {
   font-size: 16px;
-  color: rgb(35, 56, 68);
+  color: var(--text-color);
 }
 .image_container {
   display: flex;
@@ -42,9 +42,9 @@
   border-radius: 10px !important;
 }
 .full_card{
- background-color: var(--secondary-color);
+ background-color: var(--sub-color);
    border-radius: 10px !important;
-    border: 2px solid rgb(35, 56, 68);
+    border: 2px solid var(--main-color);
 
 }
 .card_container{
