--- a/src/components/home/searchBar.module.css
+++ b/src/components/home/searchBar.module.css
@@ -3,27 +3,28 @@
 	padding-top: 20px;
 }
 .form_control {
-	background-color: rgba(255, 255, 255, 0.808);
+	background-color: var(--sub-color);
 	width: 78vw;
 	height: 50px;
 	border-radius: 10px 0px 0px 10px;
 	padding-left: 10px;
-	border: 1px solid #ffffff;
+	border: 1px solid var(--main-color);
 	margin-right: 15%;
 	justify-content: flex-start;
 }
 
 ::placeholder {
-	color: rgb(0, 0, 0);
+	color: var(--text-color);
 }
 .btn_div {
 	justify-content: flex-end;
 }
 .btn {
+	background-color: var(--sub-color);
 	width: 100px;
 	height: 50px;
 	border-radius: 0px 10px 10px 0px;
-	border: 1px solid #000000a6;
+	border: 1px solid var(--main-color);
 }
 @media (max-width: 990px) {
 	.btn {
