--- a/src/components/auth/logIn.css
+++ b/src/components/auth/logIn.css
@@ -1,6 +1,6 @@
 .grid_container {
 	display: flex;
-	margin-top: 1%;
+	margin:10%;
 	border: 1px solid rgba(95, 94, 94, 0.507);
 }
 .login_container {
