--- a/src/components/home/searchBar.module.css
+++ b/src/components/home/searchBar.module.css
@@ -2,9 +2,12 @@
 	display: flex;
 	padding-top: 20px;
 }
+.form_outline {
+	width: 90%;
+}
 .form_control {
 	background-color: var(--sub-color);
-	width: 78vw;
+	width: 100%;
 	height: 50px;
 	border-radius: 10px 0px 0px 10px;
 	padding-left: 10px;
@@ -18,10 +21,11 @@
 }
 .btn_div {
 	justify-content: flex-end;
+	width: 10%;
 }
 .btn {
 	background-color: var(--sub-color);
-	width: 100px;
+	width: 100%;
 	height: 50px;
 	border-radius: 0px 10px 10px 0px;
 	border: 1px solid var(--main-color);
