--- a/src/components/home/searchBar.module.css
+++ b/src/components/home/searchBar.module.css
@@ -14,6 +14,7 @@
 	border: 1px solid var(--main-color);
 	margin-right: 15%;
 	justify-content: flex-start;
+	color: var(--text-color);
 }
 
 ::placeholder {
