add simple changes

--- a/src/components/auth/logIn.css
+++ b/src/components/auth/logIn.css
@@ -1,6 +1,6 @@
 .grid_container {
 	display: flex;
-	margin:0;
+	margin: 0;
 	border: 1px solid rgba(95, 94, 94, 0.507);
 }
 .login_container {
@@ -33,6 +33,14 @@
 	color: rgb(65, 101, 112);
 	border: 2px solid rgb(65, 101, 112);
 }
+.password-toggle {
+	position: absolute;
+	right: 10px;
+	top: 50%;
+	transform: translateY(-50%);
+	cursor: pointer;
+}
+
 /* .pic_container img {
 } */
 @media (max-width: 990px) {
