--- a/src/components/auth/logIn.css
+++ b/src/components/auth/logIn.css
@@ -1,20 +1,15 @@
 .grid_container {
-	display: flex;
 	margin: 0;
 	border: 1px solid rgba(95, 94, 94, 0.507);
+	height: 100%;
 }
 .login_container {
-	background-color: rgb(255, 255, 255);
-	flex: 1;
-	padding: 20px;
-}
-.pic_container {
-	border: 1px rgb(8, 8, 8);
-	background-color: rgb(255, 255, 255);
-	flex: 1;
+	background-color: rgba(202, 201, 201, 0.795);
+	background-repeat: no-repeat;
+	background-position: bottom;
 }
 .login-form {
-	padding: 20%;
+	padding: 8% 25% 10% 25%;
 }
 .h1-login {
 	color: val(--text-color);
