--- a/src/components/auth/signUp.css
+++ b/src/components/auth/signUp.css
@@ -7,7 +7,7 @@
 	/* padding-bottom: 10%; */
 }
 .form-container {
-	padding: 10%;
+	padding: 5% 25% 5% 25%;
 	border: 1px rgba(0, 0, 0, 0.177);
 }
 .h1-signUp {
