--- a/src/components/auth/logIn.css
+++ b/src/components/auth/logIn.css
@@ -2,15 +2,18 @@
 	margin: 0;
 	border: 1px solid rgba(95, 94, 94, 0.507);
 	height: 100%;
+	
 }
 .login_container {
-	background-color: rgba(202, 201, 201, 0.795);
+	padding: 5% 30% 5% 30%;
 	background-repeat: no-repeat;
 	background-position: bottom;
 	background-size: 100%;
+	/* background-Size: cover, */
 }
 .login-form {
-	padding: 8% 30% 10% 30%;
+	padding: 10% 2% 15% 2%;
+	background-color: rgba(255, 255, 255, 0.692);
 }
 .h1-login {
 	color: val(--text-color);
