--- a/src/components/auth/signUp.css
+++ b/src/components/auth/signUp.css
@@ -1,21 +1,23 @@
 .auth_container {
-	display: flex;
-	align-self: center;
-	justify-content: center;
+	margin: 0;
+	border: 1px solid rgba(95, 94, 94, 0.507);
 	height: 100%;
-	padding: 5%;
-	/* padding-bottom: 10%; */
+}
+.signup_container {
+	padding: 5% 30% 3% 30%;
+	background-repeat: no-repeat;
+	background-position: bottom;
+	background-size: 100%;
 }
 .form-container {
-	padding: 5% 25% 5% 25%;
-	border: 1px rgba(0, 0, 0, 0.177);
+	padding: 10% 2% 10% 2%;
+	background-color: rgba(255, 255, 255, 0.548);
 }
 .h1-signUp {
 	color: val(--text-color);
 	text-shadow: -1px -1px 0 rgba(255, 255, 255, 0.514),
 		1px -1px 0 rgba(255, 255, 255, 0.514), -1px 1px 0 rgba(255, 255, 255, 0.514),
 		1px 1px 0 rgba(255, 255, 255, 0.514);
-	/* The above text-shadow applies a white shadow to each letter in each direction */
 }
 
 .form-label {
