--- a/src/components/contactUs/contactUs.css
+++ b/src/components/contactUs/contactUs.css
@@ -1,54 +1,34 @@
 .contact-us {
-    text-align: center;
-    padding: 8% 25% 10% 25%;
-    background-repeat: no-repeat;
+	text-align: center;
+	padding: 2% 30% 5% 30%;
+	background-repeat: no-repeat;
 	background-position: bottom;
-    background-size: 100%;
+	background-size: 100%;
 }
-
-.contact-form {
-    width: 50%;
-    margin: 0 auto;
+.contactUs-form {
+	padding: 10% 2% 10% 2%;
+	background-color: rgba(255, 255, 255, 0.692);
 }
-
 .form-group {
-    margin-bottom: 20px;
+	margin-bottom: 20px;
 }
-
-.contactUs-form input {
-  margin-bottom: 10px;
+.contact-TextField {
+	margin-bottom: 10px;
 }
-.contactUs-form input,::placeholder{
-    color: #000000 !important;
-    padding-left: 10px;
-}
-.contactUs-form input,
-textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    outline: none;
-}
-.contactUs-form textarea {
-    padding-bottom: 20px;
-}
-
 .contactUs-form button {
-    padding: 6px 40px 6px 40px;
-    background-color: #000000;
-    color: #fff;
-    border: none;
-    border-radius: 20px;
-    font-size: 20px;
-    cursor: pointer;
-    border: 2px solid rgb(255, 255, 255);
+	padding: 6px 40px 6px 40px;
+	background-color: #000000;
+	color: #fff;
+	border: none;
+	border-radius: 20px;
+	font-size: 20px;
+	cursor: pointer;
+	border: 2px solid rgb(255, 255, 255);
 }
 
 .contactUs-form button:hover {
-    background-color: #ffffff;
-    color: #000000;
-    font-weight: 800;
-    border: 2px solid rgb(0, 0, 0);
+	background-color: #ffffff;
+	color: #000000;
+	font-weight: 800;
+	border: 2px solid rgb(0, 0, 0);
 }
