--- a/src/components/auth/signUp.css
+++ b/src/components/auth/signUp.css
@@ -24,18 +24,18 @@
 	color: val(--text-color) !important;
 }
 .signup-btn {
-	border: 2px solid rgb(65, 101, 112);
+	border: 2px solid rgb(255, 255, 255);
 	border-radius: 20px;
-	background-color: rgb(65, 101, 112);
-	padding: 5px 30px 5px 30px !important;
+	background-color: var(--primary-color);
+	padding: 5px 30px 10px 30px !important;
 	color: rgb(255, 255, 255);
 	font-size: 18px;
 	font-weight: 600;
 }
 .signup-btn:hover {
 	background-color: rgb(255, 255, 255);
-	color: rgb(65, 101, 112);
-	border: 2px solid rgb(65, 101, 112);
+	color:  var(--primary-color);
+	border:2px solid  var(--primary-color);
 }
 
 /* @media (max-width: 440px) {
