--- a/src/components/home/navBar.css
+++ b/src/components/home/navBar.css
@@ -2,7 +2,7 @@
 	width: 100vw;
 }
 .navbar{
-	background-color: var(--secondary-color) !important;
+	background-color: var(--primary-color) !important;
 	color: var(--text-color) !important;
 }
 .navbar a {
