--- a/src/components/auth/logIn.css
+++ b/src/components/auth/logIn.css
@@ -1,22 +1,29 @@
-.grid_container {
-	margin: 0;
-	border: 1px solid rgba(95, 94, 94, 0.507);
-	height: 100%;
+ .grid_container {
 	
-}
+	height: 100vh;
+	
+} 
+
 .login_container {
-	padding: 5% 30% 5% 30%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/* padding: 5% 30% 5% 30%; */
 	background-repeat: no-repeat;
-	background-position: bottom;
-	background-size: 100%;
-	/* background-Size: cover, */
+	/* background-position: bottom; */
+	background-size:cover;
+	height: 100vh;
+
 }
 .login-form {
+	width: 50%;
+	height: 90%;
+	
 	padding: 10% 2% 15% 2%;
 	background-color: rgba(255, 255, 255, 0.692);
 }
 .h1-login {
-	color: val(--text-color);
+	/* color: var(--text-color); */
 
 }
 .login-btn {
@@ -41,32 +48,3 @@
 	cursor: pointer;
 }
 
-/* .pic_container img {
-} */
-@media (max-width: 990px) {
-	.grid_container {
-		margin-top: 0%;
-		display: unset;
-		border: 0px solid rgba(95, 94, 94, 0.507);
-	}
-	.login_container {
-		flex: 0;
-		border: 1px solid rgba(95, 94, 94, 0.507);
-		margin-top: 1%;
-	}
-	.pic_container {
-		display: none;
-	}
-	.login-form {
-		padding: 10%;
-	}
-}
-
-@media (max-width: 441px) {
-	.login_container {
-		padding: 0%;
-	}
-	.login-btn {
-		padding: 5px 15px 5px 15px !important;
-	}
-}
