--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,13 @@
 	/* padding: 20px 0px 10px 0px; */
 	/* align-items: center; */
 	justify-content: center;
+	/* background-color: blueviolet; */
 	/* height: 100vh; */
 	/* background-color: rgb(35, 56, 68); */
 	/* height: 100%; */
 }
 .empty-card-grid{
-	height: 80vh;
+	height: 100%;
 	padding: 5%;
 	font-size: 80px;
 }
@@ -34,8 +35,9 @@
 }
 
 .full_card {
-	background-color: var(--secondary-color);
+	background-color: #f0f0f016;
 	border-radius: 10px !important;
-	border: 2px solid rgb(35, 56, 68);
+	/* border: 2px solid rgb(35, 56, 68); */
+	width: 300px;
 
 }
