--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -2,5 +2,12 @@
     background-repeat: no-repeat;
         /* background-position: bottom; */
         background-size: cover;
-        height: 100vh;
+        height: 100%;
+      display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.cart-card{
+    height: 100%;
+    width: 200px;
 }
