--- a/src/components/home/navBar.css
+++ b/src/components/home/navBar.css
@@ -16,3 +16,13 @@
  height: 20px!important;
  width: 20px;
 }
+.cart-count {
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: red;
+	color: white;
+	border-radius: 50%;
+	padding: 4px 8px;
+	font-size: 12px;
+}
